# oxidtaxa

./: .gitignore  Cargo.toml  README.md  classify.py  classify_idtaxa.R  oxidtaxa_method.html  pyproject.toml  train.py  train_idtaxa.py
.claude/: settings.json
.claude/agents/: code-reviewer.md  codebase-analyzer.md  codebase-pattern-finder.md  data-engineering-expert.md  environmental-data-analyst.md  genomic-data-specialist.md  ml-ecology-specialist.md  qc-bioinformatics-specialist.md  taxonomic-assignment-expert.md
.claude/commands/: create_plan.md  create_pr.md  create_release_pr.md  debug.md  design_tests.md  founder_mode.md  implement_plan.md  implement_tests.md  (+7 more)
R/: LearnTaxa.R  seq_utils.R
benches/: oxidaxa_bench.rs  oxidtaxa_bench.rs
benchmarks/: generate_baseline.R  results.txt  run_benchmark.sh  run_real_data_idtaxa.py  sample_dataset.py  time_r.R  time_r_classify_only.R
examples/: bench_corr_aware.rs  bench_inverted.rs  eval_training.rs  inspect_training.rs  regen_golden.rs
pytest/: conftest.py
reference/: classify_idtaxa.py  generate_golden.R  run_golden.R  train_idtaxa.R  train_idtaxa.py
rust/: Cargo.toml  run_tests.sh
src/: alphabet.rs  classify.rs  fasta.rs  idtaxa.h  kmer.rs  lib.rs  matching.rs  remove_gaps.c  rng.rs  sequence.rs  training.rs  types.rs  vector_sums.c
tests/: export_golden_json.R  test_algorithmic_improvements.rs  test_alphabet.rs  test_baseline_1k.rs  test_classify.rs  test_fasta.rs  test_integration.rs  test_kmer.rs  test_margin_aware.rs  test_matching.rs  test_rng.rs  test_sequence.rs  test_ties.rs  test_training.rs
(+260 files in other folders)
