[package]
name = "oxidtaxa"
version = "0.2.0"
edition = "2021"
description = "High-performance taxonomic classifier for eDNA metabarcoding"

[lib]
name = "oxidtaxa"
crate-type = ["cdylib", "rlib"]

[dependencies]
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
pyo3 = { version = "0.24", features = ["extension-module"], optional = true }

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "oxidtaxa_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1

[features]
default = []
python = ["pyo3"]
