[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "oxidtaxa"
requires-python = ">=3.10"
version = "0.2.0"
description = "High-performance taxonomic classifier for eDNA metabarcoding"

[tool.maturin]
python-source = "python"
module-name = "oxidtaxa._core"
features = ["python"]
